--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "typescript": "^4.4.2"
   },
   "dependencies": {
+    "dotenv": "^16.0.0",
     "express": "^4.17.1",
     "puppeteer": "^13.1.3"
   }
