--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
-    "puppeteer": "^13.1.3"
+    "puppeteer": "^13.1.3",
+    "twitter-api-v2": "^1.10.0"
   }
 }
