--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build": "tsc",
     "test": "jest",
     "start": "node dist/index.js",
+    "twitter-bot": "node dist/twitter/postBot.js",
     "salvar-localmente": "ts-node --transpile-only src/salvarLocalmente.ts"
   },
   "keywords": [],
