--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/jest": "^27.0.1",
+    "@types/node": "^17.0.18",
     "jest": "^27.1.0",
     "ts-jest": "^27.0.5",
     "ts-node": "^9.1.1",
@@ -26,6 +27,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.1",
+    "mongodb": "^4.4.0",
     "puppeteer": "^13.1.3",
     "twitter-api-v2": "^1.10.0"
   }
