--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "jest",
     "start": "node dist/index.js",
     "twitter-bot": "node dist/twitter/postBot.js",
+    "twitter-bot-ts": "ts-node --transpile-only src/twitter/postbot.ts",
     "salvar-localmente": "ts-node --transpile-only src/salvarLocalmente.ts"
   },
   "keywords": [],
