--- a/.github/workflows/full-workflow.yml
+++ b/.github/workflows/full-workflow.yml
@@ -33,6 +33,9 @@ jobs:
 
     - name: Install dependencies
       run: npm install
+    
+    - name: Run all tests
+      run: npm test
 
     - name: Deploy application
       if: ${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
